# basic-object-oriented-design

./: LICENSE  README.md
Tema2/: CMakeLists.txt  main.cpp
