cmake_minimum_required(VERSION 3.19)
project(Tema2)

set(CMAKE_CXX_STANDARD 20)

add_executable(Tema2 main.cpp cmake-build-debug/StatusCar.h cmake-build-debug/Car.cpp cmake-build-debug/Car.h cmake-build-debug/EngineType.h cmake-build-debug/Audi.cpp cmake-build-debug/Audi.h cmake-build-debug/Bmw.cpp cmake-build-debug/Bmw.h cmake-build-debug/Mercedes.cpp cmake-build-debug/Mercedes.h cmake-build-debug/Volkswagen.cpp cmake-build-debug/Volkswagen.h)